fix: current month selected & modal on mobile

--- a/src/styles/calendarStyles.css
+++ b/src/styles/calendarStyles.css
@@ -263,6 +263,13 @@
   }
 }
 
+@media (max-width: 730px) {
+  .task-modal {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
 @media (max-width: 620px) {
   .fc-popover {
     min-width: 90% !important;
