--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -717,7 +717,7 @@ input[type="date"] {
 .add-task-modal::before {
   content: "";
   position: absolute;
-  top: 20px;
+  top: 15px;
   right: -15px;
   width: 20px;
   height: 20px;
